changes to README and to compose file

--- a/compose.yml
+++ b/compose.yml
@@ -5,8 +5,8 @@ services:
     container_name: my-mongodb
     ports:
       - "27017:27017"
-    volumes:
-      - mongodb_data:/data/db
+    # volumes:
+    #   - mongodb_data:/data/db
     networks:
       - my-network
   backend:
@@ -56,5 +56,5 @@ networks:
   my-network:
     driver: bridge
 
-volumes:
-  mongodb_data:
+# volumes:
+#   mongodb_data:
